generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model News {
  id          String   @id @default(uuid())
  title       String
  description String
  content     String?
  source      String
  sourceUrl   String   @unique
  imageUrl    String?
  category    Category
  publishedAt DateTime
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([category])
  @@index([publishedAt])
  @@index([createdAt])
}

model Article {
  id        String   @id @default(uuid())
  title     String
  content   String   @db.Text
  summary   String
  date      DateTime @unique
  newsCount Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Auditoria da geração (plano V2 §18.4). Nullable por causa dos artigos
  // publicados antes desta migration — não há como preenchê-los retroativamente.
  generatedAt   DateTime?
  promptVersion String?
  modelVersion  String?
  status        ArticleStatus @default(PUBLISHED)

  sources BriefingSource[]

  @@index([date])
}

/// Notícia que originou o briefing do dia, na ordem em que foi enviada à IA.
/// Os campos de exibição são desnormalizados de propósito: o Stage 8 do
/// pipeline apaga News com mais de 30 dias, e o Article vive 90 — sem copiar
/// título/fonte/URL, dois terços dos briefings retidos ficariam sem lista de
/// fontes, que é justamente o que a §18.4 quer auditar.
///
/// A chave natural é `sourceUrl` (é `@unique` em News e nunca falta), não
/// `newsId` — que é um ponteiro fraco, sem FK como em Favorite, nulo quando a
/// notícia não pôde ser resolvida e obsoleto depois que o cleanup a remove.
model BriefingSource {
  id        String   @id @default(uuid())
  articleId String
  newsId    String?
  position  Int
  title     String
  source    String
  sourceUrl String
  createdAt DateTime @default(now())

  article Article @relation(fields: [articleId], references: [id], onDelete: Cascade)

  @@unique([articleId, sourceUrl])
  @@index([articleId, position])
}

model PipelineLog {
  id          String          @id @default(uuid())
  status      PipelineStatus
  newsCount   Int             @default(0)
  articleId   String?
  // Erro da falha (legado — string única); os novos campos estruturados são
  // errorStage/errorDetail (observabilidade, item 9)
  error       String?
  // Etapa da falha (Stage 1–9, ex.: 7.5 newsletter) — null quando não falhou
  errorStage  Float?
  // Erro estruturado: { message, provider?, statusCode? }
  errorDetail Json?
  startedAt   DateTime        @default(now())
  completedAt DateTime?
  events      PipelineEvent[]

  /// A consulta que toda leitura de run faz: os últimos, por data de início —
  /// `getDevLogs` ordena por `startedAt desc`, e a etapa 8 apaga por
  /// `startedAt`. Esta tabela viveu nove fases **sem índice nenhum**, com o
  /// Postgres varrendo tudo para devolver 30 linhas.
  @@index([startedAt])
  /// A dos dois filtros que existem: `recentErrors` (só `FAILED`, na mesma
  /// ordem) e a idempotência do disparo (`SUCCESS`/`RUNNING` dentro do dia).
  @@index([status, startedAt])
}

model PipelineEvent {
  id            String             @id @default(uuid())
  pipelineLogId String
  stage         Float // Stage 1–9 (ex.: 7.5 = newsletter)
  level         PipelineEventLevel
  message       String
  context       Json?
  createdAt     DateTime           @default(now())

  pipelineLog PipelineLog @relation(fields: [pipelineLogId], references: [id], onDelete: Cascade)

  @@index([pipelineLogId, createdAt])
  @@index([level])
  @@index([stage])
  @@index([createdAt])
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  name      String?
  image     String?
  role      UserRole @default(USER)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

/// Item salvo pelo leitor. Alcança **duas** coisas — a notícia coletada e o
/// briefing do dia —, e por isso guarda `itemType` + `itemId` em vez de um
/// `newsId`.
///
/// A alternativa (um `articleId` nullable ao lado do `newsId`) tem um defeito
/// que só aparece em produção: no Postgres `NULL` nunca colide com `NULL`, e a
/// unicidade `[userId, newsId]` deixaria o **mesmo briefing ser salvo N vezes**.
/// Evitá-lo pediria dois índices únicos parciais em SQL cru.
///
/// `itemId` é ponteiro fraco, sem FK — o mesmo padrão do resto do schema. A
/// leitura omite favorito cujo conteúdo já foi apagado (o Stage 8 do pipeline
/// remove News com mais de 30 dias).
model Favorite {
  id        String           @id @default(uuid())
  userId    String
  itemType  FavoriteItemType @default(NEWS)
  itemId    String
  createdAt DateTime         @default(now())

  @@unique([userId, itemType, itemId])
  @@index([userId, createdAt])
}

/// Preferências do leitor (§19 do plano V2).
///
/// Tabela própria, e não colunas em `User`, porque `upsertUser` roda a cada
/// sign-in: dado de produto não divide espaço com dado de autenticação.
///
/// **Só entra aqui o que a interface consegue honrar hoje.** "Horário do
/// briefing" ficou de fora — o pipeline roda num cron único, e um controle que
/// o sistema não honra é o mesmo erro da pílula de contagem da Fase 4. A
/// preferência de receber o briefing por e-mail mora em `Subscriber`, que é
/// quem o envio lê; duplicá-la aqui criaria duas fontes de verdade para a
/// mesma resposta.
model UserPreference {
  id         String          @id @default(uuid())
  userId     String          @unique
  categories Category[]      @default([])
  theme      ThemePreference @default(SYSTEM)
  createdAt  DateTime        @default(now())
  updatedAt  DateTime        @updatedAt
}

/// Assinante da newsletter. `userId` é nullable porque a inscrição **não exige
/// conta**: o formulário do rodapé pede só o e-mail, e o cancelamento é por
/// token, sem sessão.
///
/// Ele existe para a tela de conta responder "este usuário está inscrito?" sem
/// cruzar por e-mail — que mentiria quando o e-mail do provedor de login não é
/// o da inscrição, mostrando inscrito como não inscrito e criando inscrição
/// duplicada no clique seguinte. A leitura ainda cai no e-mail como segunda
/// tentativa, e amarra o `userId` quando acha.
model Subscriber {
  id        String           @id @default(uuid())
  email     String           @unique
  userId    String?
  status    SubscriberStatus @default(ACTIVE)
  token     String           @unique @default(uuid())
  createdAt DateTime         @default(now())
  updatedAt DateTime         @updatedAt

  @@index([status])
  @@index([userId])
}

model NewsletterLog {
  id        String   @id @default(uuid())
  date      DateTime @unique
  articleId String?
  total     Int      @default(0)
  sent      Int      @default(0)
  failed    Int      @default(0)
  error     String?
  createdAt DateTime @default(now())

  @@index([date])
}

model DailyMetric {
  id               String   @id @default(uuid())
  date             DateTime @unique
  newsCollected    Int      @default(0)
  newsByCategory   Json     @default("{}")
  articleGenerated Boolean  @default(false)
  pipelineDuration Int?
  aiProvider       String?
  pipelineErrors   Int      @default(0)
  newsApiCount     Int      @default(0)
  rssCount         Int      @default(0)
  cleanupCount     Int      @default(0)
  createdAt        DateTime @default(now())

  @@index([date])
}

/// Evento de produto (docs/v2/04-analytics-e-slots.md, parte 1).
///
/// **Anônimo por construção.** Não há `userId`, e-mail, IP nem User-Agent:
/// `sessionId` é aleatório, de sessão, e não persiste entre visitas. É o que a
/// §4 exige, e é o que permite a tabela existir sem virar dado pessoal.
///
/// `payload` é `Json` porque cada um dos 14 tipos tem campos próprios — a
/// alternativa seria 14 tabelas ou uma tabela larga com 20 colunas nulas. O
/// contrato de cada payload é a união discriminada de `@newranews/types`, e a
/// rota o valida com Zod antes de gravar.
///
/// Retenção de 90 dias, executada pela etapa 8 do pipeline diário.
model ProductEvent {
  id         String   @id @default(uuid())
  type       String
  sessionId  String
  locale     String
  path       String
  /// Quando aconteceu no cliente. Pode divergir de `createdAt` por fila.
  occurredAt DateTime
  payload    Json     @default("{}")
  createdAt  DateTime @default(now())

  /// A consulta que toda métrica faz: um tipo, numa janela de tempo.
  @@index([type, occurredAt])
  /// A do expurgo, e a de "o que aconteceu neste dia".
  @@index([occurredAt])
}

/// Falha registrada de forma durável (§8 do plano de observabilidade).
///
/// **Uma linha por `(fingerprint, windowStart)`, nunca por ocorrência.** Um 500
/// que dispara 10.000 vezes numa hora é *uma* linha com `count: 10000`. O que
/// isso compra é o teto: a tabela cresce com *falhas distintas × 24*, e não com
/// o tráfego — que é a diferença entre caber num plano free e não caber.
///
/// **O custo vai escrito aqui porque é real: não dá para reconstruir a
/// ocorrência individual.** O que sobrevive é `count`, as duas pontas da janela
/// (`firstRequestId`/`lastRequestId`, que acham a linha de log correspondente)
/// e um `context` amostrado. Quem precisar da ocorrência exata vai ao log —
/// enquanto ele ainda existir, que é justamente o problema que esta tabela
/// resolve.
///
/// **Sem FK para `PipelineLog`, e o motivo não é a cascata.** O `ErrorEvent`
/// vive 14 dias e o `PipelineLog` 30, então o erro sempre morre primeiro e uma
/// cascata nunca alcançaria linha viva. O motivo é o coalescimento: uma linha
/// cobre uma hora e pode acumular ocorrências de mais de um run, então
/// `pipelineLogId` é o **último visto** — um ponteiro aproximado, não uma
/// relação. Uma FK afirmaria um vínculo que a agregação torna falso, e o banco
/// passaria a impedir o expurgo do run por causa dele.
///
/// **`code` e `category` são texto, não enum do Postgres.** O conjunto fechado
/// mora em `apps/api/src/utils/errors.ts`, com guarda derivada do parser
/// (`error-taxonomy.test.ts`); repeti-lo aqui criaria uma segunda fonte de
/// verdade e cobraria uma migration por código novo — cada fase seguinte deste
/// plano acrescenta pelo menos um. E `origin: PIPELINE` traz falha de terceiro,
/// que não passa pelo tuple da API.
///
/// Retenção de 14 dias, executada pela etapa 8 do pipeline diário — e são 14,
/// não 30, porque esta tabela responde *"o que está quebrado agora"*, enquanto
/// `PipelineLog` e `DailyMetric` respondem *"estava quebrado no mês passado"*.
/// Quem escreve é `services/error-event.service.ts`, sempre pelo buffer.
model ErrorEvent {
  id          String        @id @default(uuid())
  /// Identidade da falha: o que separa uma de outra ao agrupar. Derivado de
  /// `origin`, `severity`, `code` e `route` — nunca de id de recurso, que
  /// trocaria o teto da tabela por "uma linha por notícia".
  ///
  /// **A `severity` entrou na implementação**, e não estava no desenho: o
  /// pipeline registra a mesma etapa como `WARN` (degradou) e como `ERROR`
  /// (abortou), e sem ela as duas cairiam na mesma linha — com a segunda
  /// apagando a gravidade da primeira na tela.
  fingerprint String
  /// Hora cheia em UTC. É a segunda metade da chave do upsert.
  windowStart DateTime
  origin      ErrorOrigin
  severity    ErrorSeverity
  /// Literal de `ERROR_CODES` quando vem da API; nome de falha do pipeline nos
  /// outros casos.
  code        String
  /// Literal de `ERROR_CATEGORIES`.
  category    String

  count Int @default(1)

  /// **O padrão da rota (`/api/news/:id`), nunca a URL crua.** A URL traria o
  /// id e a query string para dentro de uma coluna indexada, e cada uma viraria
  /// um fingerprint próprio.
  route          String?
  statusCode     Int?
  /// Já redigida e truncada na escrita — a redação é a mesma do logger.
  message        String
  /// As duas pontas da janela, que é o que liga esta linha ao log.
  firstRequestId String?
  lastRequestId  String?
  /// Último run visto, sem FK (ver acima).
  pipelineLogId  String?
  /// Amostra escalar da circunstância (`ErrorContext`), não objeto aninhado.
  context        Json?

  firstSeenAt DateTime @default(now())
  lastSeenAt  DateTime @default(now())

  /// O alvo do upsert, e é ele que impede a segunda linha da mesma falha na
  /// mesma hora. Serve também a busca por prefixo de `fingerprint`, e é por
  /// isso que **não** existe um `@@index([fingerprint])` ao lado.
  @@unique([fingerprint, windowStart])
  /// A do expurgo e a da tela: a janela de 24 h / 7 d.
  @@index([windowStart])
  /// As duas dimensões pelas quais o painel da Fase 5 filtra.
  @@index([origin, windowStart])
  @@index([severity, windowStart])
}

enum Category {
  TECHNOLOGY
  POLITICS
  ECONOMY
  SPORTS
  SCIENCE
  ENTERTAINMENT
  WORLD
  HEALTH
}

enum ArticleStatus {
  DRAFT
  PUBLISHED
  FAILED
}

enum PipelineStatus {
  RUNNING
  SUCCESS
  FAILED
}

enum PipelineEventLevel {
  INFO
  WARN
  ERROR
}

enum SubscriberStatus {
  ACTIVE
  UNSUBSCRIBED
}

enum UserRole {
  USER
  ADMIN
}

enum FavoriteItemType {
  NEWS
  ARTICLE
}

enum ThemePreference {
  LIGHT
  DARK
  SYSTEM
}

/// De onde a falha veio. Enum de verdade — ao contrário de `code`, este
/// conjunto é da forma do sistema, não da taxonomia que cresce a cada fase.
enum ErrorOrigin {
  API
  PIPELINE
  WEB
  INVARIANT
}

/// `FATAL` é o que escreve na hora, sem passar pelo buffer: são poucos por dia,
/// e perder um para um `SIGTERM` é perder o único registro do que matou o
/// processo — que é exatamente a forma do incidente de 03/09/2026.
enum ErrorSeverity {
  WARN
  ERROR
  FATAL
}

/// Ação de admin registrada de forma durável — quem disparou o pipeline, quem
/// apagou o quê (§9 do plano de observabilidade, decidido em 12/09/2026).
///
/// **É o `authz_admin` do vocabulário do OWASP (§3.2)**, e até esta tabela uma
/// notícia apagada não deixava rastro de quem a apagou: `request.user.sub`
/// chegava à rota e morria com a resposta. A linha de log do Render é o único
/// outro registro, e ela rola para fora.
///
/// **Uma linha por ocorrência — ao contrário do `ErrorEvent`, de propósito.**
/// Auditoria existe para responder *qual* clique, de *quem*, *quando*;
/// coalescer por hora apagaria exatamente isso. O teto vem de outro lugar: só
/// um humano com sessão ADMIN produz linha, então a tabela cresce com cliques
/// de admin, e não com tráfego.
///
/// **`actorId` sem FK para `User`**, como todo `userId` deste schema
/// (`Favorite`, `UserPreference`, `Subscriber`). Aqui há um motivo a mais: a
/// trilha tem de sobreviver ao ator. Não há exclusão de conta no produto hoje,
/// e quando houver, o registro de quem apagou o quê não pode sumir junto. E
/// **só o id** — nenhum e-mail: quem precisar do nome junta com `User` na
/// leitura, e a tabela fica sem dado pessoal, como o `ErrorEvent`.
///
/// **`action` é texto, não enum do Postgres**, pela mesma regra do
/// `ErrorEvent.code`: o conjunto fechado mora no código, com guarda, e cada
/// mutação de admin nova acrescentaria um valor — enum aqui cobraria uma
/// migration por ação, além da rota e das três guardas que ela já custa.
///
/// **Quem escreve é a API, no PR 5b** — e o disparo do pipeline exige que o
/// BFF encaminhe o ator, porque a cadeia sessão → `CRON_SECRET` →
/// `JOB_SECRET` chega à API sem usuário nenhum. O `actorId` é obrigatório de
/// propósito: linha de auditoria sem ator não é auditoria.
///
/// Retenção de 365 dias, na etapa 8 — mais que qualquer outra tabela, porque
/// log de segurança responde perguntas feitas meses depois.
model AuditEvent {
  id        String  @id @default(uuid())
  /// `User.id` de quem agiu — ponteiro lógico, sem FK (ver acima).
  actorId   String
  /// Literal do conjunto fechado do código (`pipeline.triggered`,
  /// `news.deleted`, …), nunca interpolado.
  action    String
  /// O alvo, quando há: o id da notícia apagada, o `PipelineLog.id` do run
  /// disparado. Nulo quando a ação não criou nada (disparo que devolveu
  /// `already-succeeded-today`).
  targetId  String?
  /// O desfecho que a rota devolveu — o `outcome` do disparo, `deleted` ou
  /// `not-found` na exclusão. É o que separa "clicou" de "aconteceu".
  outcome   String?
  /// O `x-request-id` da requisição, que acha a linha de log.
  requestId String?
  /// Amostra escalar, não objeto aninhado — mesma regra do `ErrorEvent`.
  context   Json?

  createdAt DateTime @default(now())

  /// A da tela (mais recentes primeiro) e a do expurgo.
  @@index([createdAt])
}

/// Segundos em que a API esteve de pé, por dia UTC — o acumulador das horas
/// do plano (§3.1 e §4.3 do plano de observabilidade, decidido em 12/09/2026).
///
/// **O teto que suspendeu a API em 29/08/2026 era uma métrica de saturação
/// que ninguém observava**: 750 h/mês no plano free do Render, e o keep-alive
/// gastava 744. Desde 01/09 a API dorme e acorda várias vezes por dia, o que
/// resolve a conta e destrói a única medida que existia — `process.uptime()`
/// zera a cada acordada, então "horas do mês" não é derivável dele, e o
/// `uptimeSeconds` do `/api/metrics/http` fala só desta instância.
///
/// **Uma linha por dia, incrementada** — não uma amostra por acordada. O
/// heartbeat (PR 5b) faz `upsert` do dia com `increment` do delta desde o
/// último tique, e o `onClose` grava o resto com o mesmo prazo do flush do
/// `ErrorEvent`. A perda máxima por `SIGKILL` é um intervalo de heartbeat; a
/// soma do mês dividida por 750 é o arco de saturação, e a linha de hoje é
/// incompleta por definição.
///
/// **Não é coluna do `DailyMetric`, de propósito.** Aquela linha nasce na
/// etapa 9 do pipeline, uma vez por dia, e o seed também a cria; um heartbeat
/// escrevendo nela a cada cinco minutos seria um segundo escritor com outra
/// cadência na mesma linha. Uma tabela de duas colunas custa menos que essa
/// disputa.
///
/// Mais de uma instância soma na mesma linha, que é como o Render cobra.
///
/// Retenção indefinida, como o `DailyMetric` — 365 linhas por ano.
model DailyUptime {
  id      String   @id @default(uuid())
  /// Dia de calendário à meia-noite UTC, como `DailyMetric.date`.
  date    DateTime @unique
  /// Acumulado do dia. Cabe em `Int` com folga: o máximo é 86.400.
  seconds Int      @default(0)

  updatedAt DateTime @updatedAt
}
