%% Diagrama Entidade-Relacionamento — Newra News
%% ---
%% Atualizado em 15/09/2026: **todas** as tabelas do `schema.prisma` — o de
%% 16/08 documentava quatro, e o de 01/09 ganhou as oito que faltavam. A
%% ERROR_EVENT entrou com a Fase 4 do plano de observabilidade; AUDIT_EVENT e
%% DAILY_UPTIME com a Fase 5, que também tirou o `aiTokensUsed` de
%% DAILY_METRIC — e a guarda passou a comparar **coluna a coluna**, porque a
%% comparação por entidade deixava a coluna morta no desenho. SOURCE_HEALTH
%% entrou com a Fase 11 (PR 11a).
%% ---
%% A contagem saiu daqui de propósito: número que descreve uma coleção apodrece
%% no primeiro `model` novo, e quem garante que este desenho está completo é o
%% `diagram-drift.test.ts`, que compara com a lista do schema.
%% ---
%% **Duas relações são chave estrangeira de verdade**, as duas com
%% `onDelete: Cascade` — BRIEFING_SOURCE → ARTICLE e PIPELINE_EVENT →
%% PIPELINE_LOG. Todas as outras linhas abaixo são **referências lógicas**:
%% o ponteiro existe na coluna e nada no banco o obriga, o que é decisão de
%% projeto (o expurgo da etapa 8 apaga notícia com mais de 30 dias, e um
%% favorito que apontasse para ela por FK impediria a remoção).
%% ---
%% Enums: Category (8) · ArticleStatus (DRAFT · PUBLISHED · FAILED) ·
%% PipelineStatus (RUNNING · SUCCESS · FAILED) · PipelineEventLevel
%% (INFO · WARN · ERROR) · SubscriberStatus (ACTIVE · UNSUBSCRIBED) ·
%% UserRole (USER · ADMIN) · FavoriteItemType (NEWS · ARTICLE) ·
%% ThemePreference (LIGHT · DARK · SYSTEM) · ErrorOrigin (API · PIPELINE ·
%% WEB · INVARIANT) · ErrorSeverity (WARN · ERROR · FATAL) · SourceKind
%% (RSS · AGGREGATOR) · SourceOutcome (OK · EMPTY · FAILED — "não tentada" é
%% ausência de linha, derivada no web como o NEVER_RAN do run).
erDiagram
    NEWS {
        string id PK "uuid"
        string title
        string description "dek — separado do corpo na ingestão"
        string content "corpo, opcional"
        string source
        string sourceUrl UK "chave de deduplicação"
        string imageUrl "opcional"
        Category category "classificador por palavra-chave"
        datetime publishedAt
        datetime createdAt
        datetime updatedAt
    }

    ARTICLE {
        string id PK "uuid"
        string title "texto puro — sem Markdown"
        text content "Markdown gerado por IA"
        string summary "dek — texto puro"
        datetime date UK "1 briefing por dia"
        int newsCount
        datetime generatedAt "auditoria, nullable"
        string promptVersion "auditoria, nullable"
        string modelVersion "auditoria, nullable"
        ArticleStatus status "default PUBLISHED"
        datetime createdAt
        datetime updatedAt
    }

    BRIEFING_SOURCE {
        string id PK "uuid"
        string articleId FK "cascade"
        string newsId "ponteiro fraco, nullable"
        int position "ordem em que foi enviada à IA"
        string title "desnormalizado — News vive 30d, Article vive 90d"
        string source "desnormalizado"
        string sourceUrl "chave natural, unica por artigo"
        datetime createdAt
    }

    PIPELINE_LOG {
        string id PK "uuid"
        PipelineStatus status
        int newsCount
        string articleId "lógico, nullable"
        string error "legado — string única"
        float errorStage "etapa da falha, ex. 7.5"
        json errorDetail "message, provider, statusCode"
        datetime startedAt
        datetime completedAt "nullable"
    }

    PIPELINE_EVENT {
        string id PK "uuid"
        string pipelineLogId FK "cascade"
        float stage "1 a 9, com 7.5 e 8.5"
        PipelineEventLevel level
        string message
        json context "nullable"
        datetime createdAt
    }

    USER {
        string id PK "uuid"
        string email UK
        string name "nullable"
        string image "nullable"
        UserRole role "default USER"
        datetime createdAt
        datetime updatedAt
    }

    USER_PREFERENCE {
        string id PK "uuid"
        string userId UK "lógico — 1 por usuário"
        Category categories "lista, default vazia"
        ThemePreference theme "default SYSTEM"
        datetime createdAt
        datetime updatedAt
    }

    FAVORITE {
        string id PK "uuid"
        string userId "lógico"
        FavoriteItemType itemType "NEWS ou ARTICLE"
        string itemId "ponteiro fraco — alcança as duas tabelas"
        datetime createdAt
    }

    SUBSCRIBER {
        string id PK "uuid"
        string email UK
        string userId "nullable — inscrição não exige conta"
        SubscriberStatus status "default ACTIVE"
        string token UK "cancelamento sem sessão"
        datetime createdAt
        datetime updatedAt
    }

    NEWSLETTER_LOG {
        string id PK "uuid"
        datetime date UK "1 envio por dia"
        string articleId "lógico, nullable"
        int total
        int sent
        int failed
        string error "nullable — corpo do Resend é redigido"
        datetime createdAt
    }

    DAILY_METRIC {
        string id PK "uuid"
        datetime date UK "1 registro por dia"
        int newsCollected
        json newsByCategory
        boolean articleGenerated
        int pipelineDuration "ms, nullable"
        string aiProvider "gemini ou groq, nullable"
        int pipelineErrors
        int newsApiCount "NewsData.io"
        int rssCount
        int cleanupCount
        datetime createdAt
    }

    PRODUCT_EVENT {
        string id PK "uuid"
        string type "14 tipos do catálogo"
        string sessionId "aleatório, de sessão — anônimo por construção"
        string locale
        string path
        datetime occurredAt "quando aconteceu no cliente"
        json payload "união discriminada, validada por Zod"
        datetime createdAt
    }

    ERROR_EVENT {
        string id PK "uuid"
        string fingerprint "identidade — origin + severity + code + route"
        datetime windowStart "hora cheia UTC — 1 linha por falha por hora"
        ErrorOrigin origin "API · PIPELINE · WEB · INVARIANT"
        ErrorSeverity severity "WARN · ERROR · FATAL"
        string code "literal de ERROR_CODES — texto, não enum do banco"
        string category "literal de ERROR_CATEGORIES"
        int count "ocorrências coalescidas na janela"
        string route "escopo: padrão da rota na API, etapa no pipeline"
        int statusCode "nullable"
        string message "redigida e truncada"
        string firstRequestId "as duas pontas da janela — acham a linha do log"
        string lastRequestId
        string pipelineLogId "último run visto — aproximado, sem FK"
        json context "amostra escalar, nullable"
        datetime firstSeenAt
        datetime lastSeenAt
    }

    AUDIT_EVENT {
        string id PK "uuid"
        string actorId "User.id — ponteiro lógico, sem FK: a trilha sobrevive ao ator"
        string action "conjunto fechado no código — texto, não enum do banco"
        string targetId "notícia apagada ou run disparado, nullable"
        string outcome "o que a rota devolveu — separa clicou de aconteceu, nullable"
        string requestId "acha a linha do log, nullable"
        json context "amostra escalar, nullable"
        datetime createdAt "1 linha por ocorrência — auditoria não coalesce"
    }

    DAILY_UPTIME {
        string id PK "uuid"
        datetime date UK "dia UTC — 1 linha por dia, incrementada pelo heartbeat"
        int seconds "acumulado do dia; soma do mês / 750 h é o arco do plano"
        datetime updatedAt
    }

    SOURCE_HEALTH {
        string id PK "uuid"
        string source "name de rss-sources.ts ou newsdata — texto, sem FK: a fonte removida continua na série"
        SourceKind kind "RSS · AGGREGATOR"
        datetime day "dia UTC — 1 linha por (fonte, dia), e o último run do dia representa o dia"
        int fetched "itens que a fonte trouxe no run"
        int kept "dos fetched, quantos entraram no acervo naquele dia — a coluna que decide trocar provedor"
        SourceOutcome outcome "OK · EMPTY · FAILED"
        string failureReason "redigida e truncada, nullable"
        int latencyMs "do fetch ao parse, nullable"
        string pipelineLogId "o run que escreveu a linha — sem FK, nullable"
    }

    ARTICLE ||--o{ BRIEFING_SOURCE : "sources — FK, cascade"
    PIPELINE_LOG ||--o{ PIPELINE_EVENT : "events — FK, cascade"

    BRIEFING_SOURCE }o--o| NEWS : "sourceUrl (lógica)"
    PIPELINE_LOG }o--o| ARTICLE : "articleId (lógica)"
    ERROR_EVENT }o--o| PIPELINE_LOG : "pipelineLogId — último visto, sem FK"
    SOURCE_HEALTH }o--o| PIPELINE_LOG : "pipelineLogId — o run que escreveu a linha, sem FK"
    NEWSLETTER_LOG }o--o| ARTICLE : "articleId (lógica)"
    ARTICLE ||--o| DAILY_METRIC : "1 briefing por dia ↔ 1 métrica por dia"

    USER ||--o| USER_PREFERENCE : "userId (lógica)"
    USER ||--o{ FAVORITE : "userId (lógica)"
    USER ||--o| SUBSCRIBER : "userId (lógica, nullable)"
    USER ||--o{ AUDIT_EVENT : "actorId (lógica — sem FK de propósito)"
    FAVORITE }o--o| NEWS : "itemId quando itemType = NEWS"
    FAVORITE }o--o| ARTICLE : "itemId quando itemType = ARTICLE"
    AUDIT_EVENT }o--o| NEWS : "targetId quando action = news.deleted"
    AUDIT_EVENT }o--o| PIPELINE_LOG : "targetId quando action = pipeline.triggered"
